set fixed width of avatar image and hide overflow

--- a/src/profile/Profile.scss
+++ b/src/profile/Profile.scss
@@ -56,10 +56,17 @@
     }
 
     &-image {
-        max-width: 48px;
+        width: 48px;
+        height: 48px;
         border-radius: 50%;
+        overflow: hidden;
         transform: rotateY(0deg);
         transition: all 1s 0s;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
 
         &:hover {
             transform: rotateY(180deg);
@@ -109,7 +116,8 @@
 
     .profile-avatar {
         &-image {
-            max-width: 100%;
+            width: 96px;
+            height: 96px;
         }
 
         .profile-status {
